# safeGenocide

./: .editorconfig  LICENSE.md  Makefile.am  README.md  safeGenocide.cpp  safeGenocide.def  safeGenocide.sln  safeGenocide.vcxproj  safeGenocide.vcxproj.filters
.github/: CODEOWNERS  settings.yml
